--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "parcel ./index.html",
-    "build": "parcel build ./index.html"
+    "build": "parcel build ./index.html",
+    "vercel": "vercel dev"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "parcel": "^2.9.3",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "vercel": "^32.1.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
